@@ -26,16 +26,20 @@ package org.hibernate.cfg;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.Map;
-import org.dom4j.Attribute;
-import org.dom4j.Element;
 
-import org.hibernate.engine.spi.NamedSQLQueryDefinition;
-import org.hibernate.internal.CoreMessageLogger;
+import org.hibernate.CacheMode;
+import org.hibernate.FlushMode;
 import org.hibernate.MappingException;
 import org.hibernate.engine.ResultSetMappingDefinition;
+import org.hibernate.engine.spi.NamedSQLQueryDefinition;
+import org.hibernate.engine.spi.NamedSQLQueryDefinitionBuilder;
+import org.hibernate.internal.CoreMessageLogger;
 import org.hibernate.internal.util.StringHelper;
 
 import org.jboss.logging.Logger;
+
+import org.dom4j.Attribute;
+import org.dom4j.Element;
 
 /**
  * @author Emmanuel Bernard
@@ -62,9 +66,9 @@ public class NamedSQLQuerySecondPass extends ResultSetMappingBinder implements Q
 		boolean cacheable = "true".equals( queryElem.attributeValue( "cacheable" ) );
 		String region = queryElem.attributeValue( "cache-region" );
 		Attribute tAtt = queryElem.attribute( "timeout" );
-		Integer timeout = tAtt == null ? null : new Integer( tAtt.getValue() );
+		Integer timeout = tAtt == null ? null : Integer.valueOf( tAtt.getValue() );
 		Attribute fsAtt = queryElem.attribute( "fetch-size" );
-		Integer fetchSize = fsAtt == null ? null : new Integer( fsAtt.getValue() );
+		Integer fetchSize = fsAtt == null ? null : Integer.valueOf( fsAtt.getValue() );
 		Attribute roAttr = queryElem.attribute( "read-only" );
 		boolean readOnly = roAttr != null && "true".equals( roAttr.getValue() );
 		Attribute cacheModeAtt = queryElem.attribute( "cache-mode" );
@@ -83,45 +87,45 @@ public class NamedSQLQuerySecondPass extends ResultSetMappingBinder implements Q
 		Attribute ref = queryElem.attribute( "resultset-ref" );
 		String resultSetRef = ref == null ? null : ref.getValue();
 		if ( StringHelper.isNotEmpty( resultSetRef ) ) {
-			namedQuery = new NamedSQLQueryDefinition(
-					queryName,
-					queryElem.getText(),
-					resultSetRef,
-					synchronizedTables,
-					cacheable,
-					region,
-					timeout,
-					fetchSize,
-					HbmBinder.getFlushMode( queryElem.attributeValue( "flush-mode" ) ),
-					HbmBinder.getCacheMode( cacheMode ),
-					readOnly,
-					comment,
-					HbmBinder.getParameterTypes( queryElem ),
-					callable
-			);
+			namedQuery = new NamedSQLQueryDefinitionBuilder().setName( queryName )
+					.setQuery( queryElem.getText() )
+					.setResultSetRef( resultSetRef )
+					.setQuerySpaces( synchronizedTables )
+					.setCacheable( cacheable )
+					.setCacheRegion( region )
+					.setTimeout( timeout )
+					.setFetchSize( fetchSize )
+					.setFlushMode( FlushMode.interpretExternalSetting( queryElem.attributeValue( "flush-mode" ) ) )
+					.setCacheMode( CacheMode.interpretExternalSetting( cacheMode ) )
+					.setReadOnly( readOnly )
+					.setComment( comment )
+					.setParameterTypes( HbmBinder.getParameterTypes( queryElem ) )
+					.setCallable( callable )
+					.createNamedQueryDefinition();
 			//TODO check there is no actual definition elemnents when a ref is defined
 		}
 		else {
 			ResultSetMappingDefinition definition = buildResultSetMappingDefinition( queryElem, path, mappings );
-			namedQuery = new NamedSQLQueryDefinition(
-					queryName,
-					queryElem.getText(),
-					definition.getQueryReturns(),
-					synchronizedTables,
-					cacheable,
-					region,
-					timeout,
-					fetchSize,
-					HbmBinder.getFlushMode( queryElem.attributeValue( "flush-mode" ) ),
-					HbmBinder.getCacheMode( cacheMode ),
-					readOnly,
-					comment,
-					HbmBinder.getParameterTypes( queryElem ),
-					callable
-			);
+			namedQuery = new NamedSQLQueryDefinitionBuilder().setName( queryName )
+					.setQuery( queryElem.getText() )
+					.setQueryReturns( definition.getQueryReturns() )
+					.setQuerySpaces( synchronizedTables )
+					.setCacheable( cacheable )
+					.setCacheRegion( region )
+					.setTimeout( timeout )
+					.setFetchSize( fetchSize )
+					.setFlushMode( FlushMode.interpretExternalSetting( queryElem.attributeValue( "flush-mode" ) ) )
+					.setCacheMode( CacheMode.interpretExternalSetting( cacheMode ) )
+					.setReadOnly( readOnly )
+					.setComment( comment )
+					.setParameterTypes( HbmBinder.getParameterTypes( queryElem ) )
+					.setCallable( callable )
+					.createNamedQueryDefinition();
 		}
 
-        LOG.debugf("Named SQL query: %s -> %s", namedQuery.getName(), namedQuery.getQueryString());
+		if ( LOG.isDebugEnabled() ) {
+			LOG.debugf( "Named SQL query: %s -> %s", namedQuery.getName(), namedQuery.getQueryString() );
+		}
 		mappings.addSQLQuery( queryName, namedQuery );
 	}
 }
