@@ -49,6 +49,8 @@ import org.hibernate.PropertyNotFoundException;
 import org.hibernate.Query;
 import org.hibernate.QueryException;
 import org.hibernate.Session;
+import org.hibernate.dialect.Dialect;
+import org.hibernate.engine.query.spi.HQLQueryPlan;
 import org.hibernate.engine.query.spi.ParameterMetadata;
 import org.hibernate.engine.spi.QueryParameters;
 import org.hibernate.engine.spi.RowSelection;
@@ -66,6 +68,8 @@ import org.hibernate.type.SerializableType;
 import org.hibernate.type.StandardBasicTypes;
 import org.hibernate.type.Type;
 
+import org.jboss.logging.Logger;
+
 /**
  * Abstract implementation of the Query interface.
  *
@@ -73,6 +77,10 @@ import org.hibernate.type.Type;
  * @author Max Andersen
  */
 public abstract class AbstractQueryImpl implements Query {
+	private static final CoreMessageLogger log = Logger.getMessageLogger(
+			CoreMessageLogger.class,
+			AbstractQueryImpl.class.getName()
+	);
 
 	private static final Object UNSET_PARAMETER = new MarkerObject("<unset parameter>");
 	private static final Object UNSET_TYPE = new MarkerObject("<unset type>");
@@ -85,7 +93,7 @@ public abstract class AbstractQueryImpl implements Query {
 	private List values = new ArrayList(4);
 	private List types = new ArrayList(4);
 	private Map<String,TypedValue> namedParameters = new HashMap<String, TypedValue>(4);
-	private Map namedParameterLists = new HashMap(4);
+	private Map<String, TypedValue> namedParameterLists = new HashMap<String, TypedValue>(4);
 
 	private Object optionalObject;
 	private Serializable optionalId;
@@ -95,6 +103,7 @@ public abstract class AbstractQueryImpl implements Query {
 	private boolean cacheable;
 	private String cacheRegion;
 	private String comment;
+	private final List<String> queryHints = new ArrayList<String>();
 	private FlushMode flushMode;
 	private CacheMode cacheMode;
 	private FlushMode sessionFlushMode;
@@ -102,6 +111,8 @@ public abstract class AbstractQueryImpl implements Query {
 	private Serializable collectionKey;
 	private Boolean readOnly;
 	private ResultTransformer resultTransformer;
+	
+	private HQLQueryPlan queryPlan;
 
 	public AbstractQueryImpl(
 			String queryString,
@@ -120,57 +131,99 @@ public abstract class AbstractQueryImpl implements Query {
 		return parameterMetadata;
 	}
 
+	@Override
 	public String toString() {
 		return StringHelper.unqualify( getClass().getName() ) + '(' + queryString + ')';
 	}
 
+	@Override
 	public final String getQueryString() {
 		return queryString;
 	}
 
-	//TODO: maybe call it getRowSelection() ?
-	public RowSelection getSelection() {
-		return selection;
-	}
-	
-	public Query setFlushMode(FlushMode flushMode) {
-		this.flushMode = flushMode;
-		return this;
-	}
-	
-	public Query setCacheMode(CacheMode cacheMode) {
-		this.cacheMode = cacheMode;
-		return this;
+	@Override
+	public boolean isCacheable() {
+		return cacheable;
 	}
 
-	public CacheMode getCacheMode() {
-		return cacheMode;
-	}
-
+	@Override
 	public Query setCacheable(boolean cacheable) {
 		this.cacheable = cacheable;
 		return this;
 	}
 
+	@Override
+	public String getCacheRegion() {
+		return cacheRegion;
+	}
+
+	@Override
 	public Query setCacheRegion(String cacheRegion) {
-		if (cacheRegion != null)
+		if (cacheRegion != null) {
 			this.cacheRegion = cacheRegion.trim();
+		}
 		return this;
 	}
 
+	@Override
+	public FlushMode getFlushMode() {
+		return flushMode;
+	}
+
+	@Override
+	public Query setFlushMode(FlushMode flushMode) {
+		this.flushMode = flushMode;
+		return this;
+	}
+
+	@Override
+	public CacheMode getCacheMode() {
+		return cacheMode;
+	}
+
+	@Override
+	public Query setCacheMode(CacheMode cacheMode) {
+		this.cacheMode = cacheMode;
+		return this;
+	}
+
+	@Override
+	public String getComment() {
+		return comment;
+	}
+
+	@Override
 	public Query setComment(String comment) {
 		this.comment = comment;
 		return this;
 	}
+	  
+	@Override
+	public Query addQueryHint(String queryHint) {
+		queryHints.add( queryHint );
+		return this;
+	} 
 
+	@Override
+	public Integer getFirstResult() {
+		return selection.getFirstRow();
+	}
+
+	@Override
 	public Query setFirstResult(int firstResult) {
 		selection.setFirstRow( firstResult);
 		return this;
 	}
 
+	@Override
+	public Integer getMaxResults() {
+		return selection.getMaxRows();
+	}
+
+	@Override
 	public Query setMaxResults(int maxResults) {
-		if ( maxResults < 0 ) {
-			// treat negatives specically as meaning no limit...
+		if ( maxResults <= 0 ) {
+			// treat zero and negatives specically as meaning no limit...
 			selection.setMaxRows( null );
 		}
 		else {
@@ -179,10 +232,23 @@ public abstract class AbstractQueryImpl implements Query {
 		return this;
 	}
 
+	@Override
+	public Integer getTimeout() {
+		return selection.getTimeout();
+	}
+
+	@Override
 	public Query setTimeout(int timeout) {
 		selection.setTimeout( timeout);
 		return this;
 	}
+
+	@Override
+	public Integer getFetchSize() {
+		return selection.getFetchSize();
+	}
+
+	@Override
 	public Query setFetchSize(int fetchSize) {
 		selection.setFetchSize( fetchSize);
 		return this;
@@ -201,24 +267,20 @@ public abstract class AbstractQueryImpl implements Query {
 		return this;
 	}
 
-	/**
-	 * {@inheritDoc}
-	 */
+	@Override
 	public boolean isReadOnly() {
 		return ( readOnly == null ?
 				getSession().getPersistenceContext().isDefaultReadOnly() :
-				readOnly.booleanValue() 
+				readOnly
 		);
 	}
 
-	/**
-	 * {@inheritDoc}
-	 */
+	@Override
 	public Query setReadOnly(boolean readOnly) {
-		this.readOnly = Boolean.valueOf( readOnly );
+		this.readOnly = readOnly;
 		return this;
 	}
-
+	@Override
 	public Query setResultTransformer(ResultTransformer transformer) {
 		this.resultTransformer = transformer;
 		return this;
@@ -239,7 +301,7 @@ public abstract class AbstractQueryImpl implements Query {
 	SessionImplementor getSession() {
 		return session;
 	}
-
+	@Override
 	public abstract LockOptions getLockOptions();
 
 
@@ -250,8 +312,8 @@ public abstract class AbstractQueryImpl implements Query {
 	 *
 	 * @return Shallow copy of the named parameter value map
 	 */
-	protected Map getNamedParams() {
-		return new HashMap( namedParameters );
+	protected Map<String, TypedValue> getNamedParams() {
+		return new HashMap<String, TypedValue>( namedParameters );
 	}
 
 	/**
@@ -268,6 +330,7 @@ public abstract class AbstractQueryImpl implements Query {
 	 * @return Array of named parameter names.
 	 * @throws HibernateException
 	 */
+	@Override
 	public String[] getNamedParameters() throws HibernateException {
 		return ArrayHelper.toStringArray( parameterMetadata.getNamedParameterNames() );
 	}
@@ -288,7 +351,7 @@ public abstract class AbstractQueryImpl implements Query {
 	 *
 	 * @return The parameter list value map.
 	 */
-	protected Map getNamedParameterLists() {
+	protected Map<String, TypedValue> getNamedParameterLists() {
 		return namedParameterLists;
 	}
 
@@ -332,7 +395,7 @@ public abstract class AbstractQueryImpl implements Query {
 	 */
 	protected void verifyParameters(boolean reserveFirstParameter) throws HibernateException {
 		if ( parameterMetadata.getNamedParameterNames().size() != namedParameters.size() + namedParameterLists.size() ) {
-			Set missingParams = new HashSet( parameterMetadata.getNamedParameterNames() );
+			Set<String> missingParams = new HashSet<String>( parameterMetadata.getNamedParameterNames() );
 			missingParams.removeAll( namedParameterLists.keySet() );
 			missingParams.removeAll( namedParameters.keySet() );
 			throw new QueryException( "Not all named parameters have been set: " + missingParams, getQueryString() );
@@ -506,44 +569,44 @@ public abstract class AbstractQueryImpl implements Query {
 	}
 
 	public Query setCharacter(int position, char val) {
-		setParameter(position, new Character(val), StandardBasicTypes.CHARACTER);
+		setParameter( position, Character.valueOf( val ), StandardBasicTypes.CHARACTER );
 		return this;
 	}
 
 	public Query setBoolean(int position, boolean val) {
-		Boolean valueToUse = val ? Boolean.TRUE : Boolean.FALSE;
+		Boolean valueToUse = val;
 		Type typeToUse = determineType( position, valueToUse, StandardBasicTypes.BOOLEAN );
 		setParameter( position, valueToUse, typeToUse );
 		return this;
 	}
 
 	public Query setByte(int position, byte val) {
-		setParameter(position, new Byte(val), StandardBasicTypes.BYTE);
+		setParameter(position, val, StandardBasicTypes.BYTE);
 		return this;
 	}
 
 	public Query setShort(int position, short val) {
-		setParameter(position, new Short(val), StandardBasicTypes.SHORT);
+		setParameter(position, val, StandardBasicTypes.SHORT);
 		return this;
 	}
 
 	public Query setInteger(int position, int val) {
-		setParameter(position, new Integer(val), StandardBasicTypes.INTEGER);
+		setParameter(position, val, StandardBasicTypes.INTEGER);
 		return this;
 	}
 
 	public Query setLong(int position, long val) {
-		setParameter(position, new Long(val), StandardBasicTypes.LONG);
+		setParameter(position, val, StandardBasicTypes.LONG);
 		return this;
 	}
 
 	public Query setFloat(int position, float val) {
-		setParameter(position, new Float(val), StandardBasicTypes.FLOAT);
+		setParameter(position, val, StandardBasicTypes.FLOAT);
 		return this;
 	}
 
 	public Query setDouble(int position, double val) {
-		setParameter(position, new Double(val), StandardBasicTypes.DOUBLE);
+		setParameter(position, val, StandardBasicTypes.DOUBLE);
 		return this;
 	}
 
@@ -615,19 +678,19 @@ public abstract class AbstractQueryImpl implements Query {
 	}
 
 	public Query setBoolean(String name, boolean val) {
-		Boolean valueToUse = val ? Boolean.TRUE : Boolean.FALSE;
+		Boolean valueToUse = val;
 		Type typeToUse = determineType( name, valueToUse, StandardBasicTypes.BOOLEAN );
 		setParameter( name, valueToUse, typeToUse );
 		return this;
 	}
 
 	public Query setByte(String name, byte val) {
-		setParameter(name, new Byte(val), StandardBasicTypes.BYTE);
+		setParameter(name, val, StandardBasicTypes.BYTE);
 		return this;
 	}
 
 	public Query setCharacter(String name, char val) {
-		setParameter(name, new Character(val), StandardBasicTypes.CHARACTER);
+		setParameter(name, val, StandardBasicTypes.CHARACTER);
 		return this;
 	}
 
@@ -637,7 +700,7 @@ public abstract class AbstractQueryImpl implements Query {
 	}
 
 	public Query setDouble(String name, double val) {
-		setParameter(name, new Double(val), StandardBasicTypes.DOUBLE);
+		setParameter(name, val, StandardBasicTypes.DOUBLE);
 		return this;
 	}
 
@@ -647,12 +710,12 @@ public abstract class AbstractQueryImpl implements Query {
 	}
 
 	public Query setFloat(String name, float val) {
-		setParameter(name, new Float(val), StandardBasicTypes.FLOAT);
+		setParameter(name, val, StandardBasicTypes.FLOAT);
 		return this;
 	}
 
 	public Query setInteger(String name, int val) {
-		setParameter(name, new Integer(val), StandardBasicTypes.INTEGER);
+		setParameter(name, val, StandardBasicTypes.INTEGER);
 		return this;
 	}
 
@@ -672,7 +735,7 @@ public abstract class AbstractQueryImpl implements Query {
 	}
 
 	public Query setLong(String name, long val) {
-		setParameter(name, new Long(val), StandardBasicTypes.LONG);
+		setParameter(name, val, StandardBasicTypes.LONG);
 		return this;
 	}
 
@@ -682,7 +745,7 @@ public abstract class AbstractQueryImpl implements Query {
 	}
 
 	public Query setShort(String name, short val) {
-		setParameter(name, new Short(val), StandardBasicTypes.SHORT);
+		setParameter(name, val, StandardBasicTypes.SHORT);
 		return this;
 	}
 
@@ -721,6 +784,7 @@ public abstract class AbstractQueryImpl implements Query {
 		return this;
 	}
 
+	@Override
 	public Query setParameterList(String name, Collection vals, Type type) throws HibernateException {
 		if ( !parameterMetadata.getNamedParameterNames().contains( name ) ) {
 			throw new IllegalArgumentException("Parameter " + name + " does not exist as a named parameter in [" + getQueryString() + "]");
@@ -735,9 +799,8 @@ public abstract class AbstractQueryImpl implements Query {
 	 */
 	protected String expandParameterLists(Map namedParamsCopy) {
 		String query = this.queryString;
-		Iterator iter = namedParameterLists.entrySet().iterator();
-		while ( iter.hasNext() ) {
-			Map.Entry me = (Map.Entry) iter.next();
+		for ( Map.Entry<String, TypedValue> stringTypedValueEntry : namedParameterLists.entrySet() ) {
+			Map.Entry me = (Map.Entry) stringTypedValueEntry;
 			query = expandParameterList( query, (String) me.getKey(), (TypedValue) me.getValue(), namedParamsCopy );
 		}
 		return query;
@@ -749,12 +812,21 @@ public abstract class AbstractQueryImpl implements Query {
 	 */
 	private String expandParameterList(String query, String name, TypedValue typedList, Map namedParamsCopy) {
 		Collection vals = (Collection) typedList.getValue();
+		
+		// HHH-1123
+		// Some DBs limit number of IN expressions.  For now, warn...
+		final Dialect dialect = session.getFactory().getDialect();
+		final int inExprLimit = dialect.getInExpressionCountLimit();
+		if ( inExprLimit > 0 && vals.size() > inExprLimit ) {
+			log.tooManyInExpressions( dialect.getClass().getName(), inExprLimit, name, vals.size() );
+		}
+
 		Type type = typedList.getType();
 
 		boolean isJpaPositionalParam = parameterMetadata.getNamedParameterDescriptor( name ).isJpaStyle();
 		String paramPrefix = isJpaPositionalParam ? "?" : ParserHelper.HQL_VARIABLE_PREFIX;
 		String placeholder =
-				new StringBuffer( paramPrefix.length() + name.length() )
+				new StringBuilder( paramPrefix.length() + name.length() )
 						.append( paramPrefix ).append(  name )
 						.toString();
 
@@ -783,12 +855,16 @@ public abstract class AbstractQueryImpl implements Query {
 			return query;
 		}
 
-		StringBuffer list = new StringBuffer( 16 );
+		StringBuilder list = new StringBuilder( 16 );
 		Iterator iter = vals.iterator();
 		int i = 0;
 		while ( iter.hasNext() ) {
-			String alias = ( isJpaPositionalParam ? 'x' + name : name ) + i++ + '_';
-			namedParamsCopy.put( alias, new TypedValue( type, iter.next() ) );
+			// Variable 'name' can represent a number or contain digit at the end. Surrounding it with
+			// characters to avoid ambiguous definition after concatenating value of 'i' counter.
+			String alias = ( isJpaPositionalParam ? 'x' + name : name ) + '_' + i++ + '_';
+			if ( namedParamsCopy.put( alias, new TypedValue( type, iter.next() ) ) != null ) {
+				throw new HibernateException( "Repeated usage of alias '" + alias + "' while expanding list parameter." );
+			}
 			list.append( ParserHelper.HQL_VARIABLE_PREFIX ).append( alias );
 			if ( iter.hasNext() ) {
 				list.append( ", " );
@@ -823,8 +899,8 @@ public abstract class AbstractQueryImpl implements Query {
 		return setParameterList( name, Arrays.asList(vals), type );
 	}
 
-	public Query setParameterList(String name, Object[] vals) throws HibernateException {
-		return setParameterList( name, Arrays.asList(vals) );
+	public Query setParameterList(String name, Object[] values) throws HibernateException {
+		return setParameterList( name, Arrays.asList( values ) );
 	}
 
 	public Query setProperties(Map map) throws HibernateException {
@@ -915,23 +991,26 @@ public abstract class AbstractQueryImpl implements Query {
 	}
 
 	public QueryParameters getQueryParameters(Map namedParams) {
-		return new QueryParameters(
+		QueryParameters queryParameters = new QueryParameters(
 				typeArray(),
 				valueArray(),
 				namedParams,
 				getLockOptions(),
-				getSelection(),
+				getRowSelection(),
 				true,
 				isReadOnly(),
 				cacheable,
 				cacheRegion,
 				comment,
+				queryHints,
 				collectionKey == null ? null : new Serializable[] { collectionKey },
 				optionalObject,
 				optionalEntityName,
 				optionalId,
 				resultTransformer
 		);
+		queryParameters.setQueryPlan( queryPlan );
+		return queryParameters;
 	}
 	
 	protected void before() {
@@ -954,5 +1033,13 @@ public abstract class AbstractQueryImpl implements Query {
 			getSession().setCacheMode(sessionCacheMode);
 			sessionCacheMode = null;
 		}
+	}
+
+	public HQLQueryPlan getQueryPlan() {
+		return queryPlan;
+	}
+
+	public void setQueryPlan(HQLQueryPlan queryPlan) {
+		this.queryPlan = queryPlan;
 	}
 }
